# qml_playground

./: .gitignore  CMakeLists.txt  README.md
qml/: main.qml
src/: main.cpp
src/controller/: TestModel.h
